--- a/data/countries/de/he/odenwald/data.yaml
+++ b/data/countries/de/he/odenwald/data.yaml
@@ -6,7 +6,7 @@ state: Hessen
 district: Odenwald
 urls:
   - type: WEBSITE
-    url: http://www.gruene-odenwald.de/
+    url: https://www.gruene-odenwald.de/
   - type: FACEBOOK
     url: https://www.facebook.com/grueneodenwald/
 emails:
@@ -60,4 +60,4 @@ state: Hessen
 type: REGIONAL_CHAPTER
 urls:
   - type: WEBSITE
-    url: http://www.gruene-michelstadt.de/
+    url: https://www.gruene-michelstadt.de/
