--- a/data/countries/de/he/wetterau/data.yaml
+++ b/data/countries/de/he/wetterau/data.yaml
@@ -74,7 +74,7 @@ state: Hessen
 type: REGIONAL_CHAPTER
 urls:
   - type: WEBSITE
-    url: http://www.gruene-echzell.de/
+    url: https://www.gruene-echzell.de/
   - type: FACEBOOK
     url: https://www.facebook.com/gruenefuerechzell
 ---
@@ -86,7 +86,7 @@ state: Hessen
 type: REGIONAL_CHAPTER
 urls:
   - type: WEBSITE
-    url: http://gruene-karben.de/
+    url: http://gruene-karben.de
 ---
 city: Bad Vilbel
 country: DE
